--- a/index.html
+++ b/index.html
@@ -613,8 +613,8 @@
     <button class="audio-control" id="audioControl" aria-label="Управление звуком"></button>
     
     <!-- Фоновая музыка -->
-    <audio id="bgMusic" loop>
-        <source src="https://cdn.pixabay.com/audio/2022/11/28/audio_d1718372d8.mp3" type="audio/mpeg">
+    <audio id="bgMusic" loop preload="metadata" volume="0.3">
+    <source src="Wham_-_Last_Christmas_28464045.mp3" type="audio/mpeg">
     </audio>
 
     <script>
